--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .name {
   background-color: #A0C4FF;
-  color: #FFFFFC;
+  color: #FFADAD;
   border-radius: 5px;
   border: solid #2550FF 2px;
   margin: 10px;
@@ -9,7 +9,7 @@
   padding-right: 10px;
   padding-top: 20px;
   padding-bottom: 20px;
-  font-size:2rem;
+  font-size:30%;
 }
 #names {
   width: 50%;
