--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 .name {
   background-color: #A0C4FF;
-  color: #FFADAD;
+  color: #FEFFFE;
   border-radius: 5px;
-  border: solid #2550FF 2px;
+  border: solid #353839 2px;
   margin: 10px;
   margin-right: 10px;
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 20px;
   padding-bottom: 20px;
-  font-size:30%;
+  font-size:40%;
 }
 #names {
   width: 50%;
@@ -23,24 +23,24 @@ button {
   border-radius: 0px;
   border-color:transparent;
   background-color: transparent;
-  color:#FFFFFC;
+  color:#FEFFFE;
 }
 /*#add {
   font-weight:bold;
 }*/
 html, body {
-  background-color: #EF476F;
-  color:#FFADAD;
+  background-color: #FFADAD;
+  color:#353839;
   font-family: ShinGo;
-  font-size:20%;
+  font-size:40%;
 }
 h1 {
-  font-size:25%;
-  font-color:#FFADAD;
+  font-size:45%;
+  font-color:#FEFFFE;
 }
 button {
   font-family:ShinGo;
-  font-size:1rem;
+  font-size:30%;
 }
 input:focus{
   outline: none;
