--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .name {
-  background-color: #A0C4FF;
+  background-color: #3A86FF;
   color: #FEFFFE;
   border-radius: 5px;
-  border: solid #353839 2px;
+  border: solid rgba(58, 134, 255,0.5) 2px;
   margin: 10px;
   margin-right: 10px;
   padding-left: 10px;
@@ -29,7 +29,7 @@ button {
   font-weight:bold;
 }*/
 html, body {
-  background-color: #FFADAD;
+  background-color: #FF006E;
   color:#353839;
   font-family: ShinGo;
   font-size:140%;
