--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   background-color: #3A86FF;
   color: #FEFFFE;
   border-radius: 10px;
-  border: solid rgba(58, 134, 255,0.5) 10px;
+  border: solid rgba(58, 134, 255,0.5) 1rem;
   margin: 10px;
   margin-right: 10px;
   padding-left: 10px;
