--- a/style.css
+++ b/style.css
@@ -124,8 +124,8 @@ input:focus{
 }
 
 .winner {
-  /*animation: zoom-out 1s ease;*/
-  animation: zoom-in 2s ease ;
+  /*animation: zoom-out 1s ease;
+  animation: zoom-in 2s ease ;*/
   transition:1s;
   opacity:1;
   transform: scale(1);
