--- a/style.css
+++ b/style.css
@@ -9,10 +9,13 @@
   padding-right: 10px;
   padding-top: 20px;
   padding-bottom: 20px;
-  font-size:125%;
+  font-size:150%;
 }
 #x {
   opacity:0.2;
+  right:10%;
+  top:50%;
+  bottom:50%;
 }
 #names {
   width: 50%;
@@ -22,7 +25,7 @@ button {
 }
 .name button {
   position: absolute;
-  left: 75%;
+  left: 90%;
   border-radius: 0px;
   border-color:transparent;
   background-color: transparent;
@@ -35,15 +38,15 @@ html, body {
   background-color: #FF006E;
   color:#353839;
   font-family: ShinGo;
-  font-size:100%;
+  font-size:110%;
 }
 h1 {
-  font-size:200%;
+  font-size:210%;
   font-color:#FEFFFE;
 }
 button {
   font-family:ShinGo;
-  font-size:170%;
+  font-size:200%;
 }
 input:focus{
   outline: none;
@@ -56,7 +59,7 @@ input:focus{
   color:#353839;
 }
 #names input {
-  font-size: 130%;
+  font-size: 150%;
   width:80%
   font-family: ShinGo;
 }
@@ -79,7 +82,7 @@ input:focus{
   color: #353839;
   opacity: 0.5;
   font-family:ShinGo;
-  font-size:130%;
+  font-size:150%;
 }
 @keyframes zoom-out {
   0% {
@@ -134,7 +137,7 @@ input:focus{
   background-color:#FFDD00;
   border: solid #FFB700 4px;
   border-radius: 10px;
-  font-size:125%;
+  font-size:150%;
   color: #353839;
 }
 @font-face {
