--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ button {
 input:focus{
   outline: none;
 }
+#names {
+  width:100%;
+}
 #names input, #add {
   margin:0px 0px 0px 0px;
   border-radius: 0px;
