--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ html, body {
   color:#353839;
   font-family: ShinGo;
   font-size:110%;
+  height:100%;
+  padding:0;
+  margin:0;
+  overscroll: auto;
 }
 h1 {
   font-size:230%;
