--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@
   padding-bottom: 20px;
   font-size:150%;
 }
+.remove {
+  animation: zoom-out 1s ease-in-out;
+}
 .disabled {
   filter:grayscale(100%);
   transition: 0.5s !important;
