--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
   padding-bottom: 20px;
   font-size:150%;
   position: auto;
+  transition: left !important 1s ease-in-out;
+  transition: right !important 1s ease-in-out;
+  transition: top !important 1s ease-in-out;
+  transition: bottom !important 1s ease-in-out;
 }
 .remove {
   animation: zoom-out 1s ease-in-out;
