--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ show {
   position: relative;
   width: 20px;
   height: 20px;
-  border: 1px solid #000;
+  border: 1px solid #353839;
   border-radius: 4px;
   margin-right: 10px;
 }
@@ -216,13 +216,14 @@ show {
   width: 12px;
   height: 12px;
   border-radius: 2px;
-  background-color: #000;
+  background-color: #353839;
 }
 
 .custom-checkbox input[type="checkbox"]:checked + .checkmark::before {
   transform: translate(-50%, -50%) scale(1);
+  transition: 0.1s ease;
 }
 
 .custom-checkbox input[type="checkbox"]:focus + .checkmark {
-  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 0 2px rgba(53, 56, 57, 0.3);
 }
