--- a/style.css
+++ b/style.css
@@ -201,8 +201,8 @@ show {
 
 .checkmark {
   position: relative;
-  width: 110%;
-  height: 110%;
+  width: 40px;
+  height: 40px;
   border: 1px solid #353839;
   border-radius: 4px;
   margin-right: 10px;
